--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .flex-container {
-  background-image: url(bg-masthead.jpg);
+  background-image: url(images/bg-masthead.jpg);
   background-position: center;
   background-size: cover;
   display: flex;
@@ -15,6 +15,8 @@ body {
   width: 100%;
   align-items: center;
   justify-content: center;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 h1 {
@@ -97,7 +99,7 @@ h3 {
   background-color: rgb(184, 181, 181);
   border: none;
   position: fixed;
-  right: 12px;
+  right: 10px;
   top: 12px;
 }
 .bagger-menu .home {
@@ -203,7 +205,7 @@ h3 {
 }
 
 .website {
-  background-image: url(portfolio-4.jpg);
+  background-image: url(images/portfolio-4.jpg);
   background-position: top;
   background-size: cover;
   width: 100%;
@@ -313,7 +315,7 @@ h6 {
 
 .location {
   display: flex;
-  background-image: url(IMG-20250223-WA0039.jpg);
+  background-image: url(images/portfolio-4.jpg);
   background-position: top;
   background-size: cover;
   width: 100%;
@@ -434,7 +436,7 @@ h6 {
   flex-wrap: wrap;
   width: 100%;
   height: 400px;
-  background-image: url(IMG-20250223-WA0039.jpg);
+  background-image: url(images/IMG-20250223-WA0039.jpg);
   background-position: top;
   background-size: cover;
   width: 100%;
@@ -484,6 +486,30 @@ social {
 }
 
 @media (max-width: 768px) {
+  .flex-container {
+    background-image: url(images/bg-masthead.jpg);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    overflow-x: hidden;
+  }
+  .bagger-menu {
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    padding: px;
+    background-color: rgb(184, 181, 181);
+    border: none;
+    position: fixed;
+    right: 40px;
+    padding: 6px;
+    top: 12px;
+  }
   .flex-container {
     background-position: center;
     height: 70vh;
@@ -621,6 +647,41 @@ social {
   }
 }
 @media (max-width: 576px) {
+  .flex-container {
+    background-image: url(images/bg-masthead.jpg);
+    background-position: center;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  .bagger-menu {
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    padding: px;
+    background-color: rgb(184, 181, 181);
+    border: none;
+    position: fixed;
+    right: 40px;
+    padding: 6px;
+    top: 12px;
+  }
+  .flex-container {
+    background-position: center;
+    height: 70vh;
+    width: 100%;
+  }
+  h1 {
+    display: flex;
+    font-size: 25px;
+  }
+  p1 {
+    display: flex;
+    font-size: 12px;
+    color: #14030a;
+    justify-content: center;
+    text-align: center;
+    margin-top: -12px;
+  }
   .portfolio {
     height: 200px;
   }
@@ -628,8 +689,8 @@ social {
     display: flex;
     font-size: 14px;
     margin-top: -30px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
   .theme {
     display: flex;
