--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
+* {
+  padding: 0;
+  margin: o;
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
   overflow-x: hidden;
-  padding: 0;
-  margin: o;
 }
 
 .flex-container {
   background-image: url(images/bg-masthead.jpg);
-  background-position: center;
+  background-position-x: right;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -432,14 +436,12 @@ h6 {
 }
 
 .map {
-  display: flex;
-  flex-wrap: wrap;
   width: 100%;
   height: 400px;
-  background-image: url(images/IMG-20250223-WA0039.jpg);
-  background-position: top;
-  background-size: cover;
+}
+.map iframe {
   width: 100%;
+  height: 100%;
 }
 
 .footer {
@@ -488,7 +490,7 @@ social {
 @media (max-width: 768px) {
   .flex-container {
     background-image: url(images/bg-masthead.jpg);
-    background-position: center;
+    background-position: left;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -649,9 +651,9 @@ social {
 @media (max-width: 576px) {
   .flex-container {
     background-image: url(images/bg-masthead.jpg);
-    background-position: center;
-    -o-object-fit: contain;
-       object-fit: contain;
+    background-position: left;
+    background-size: cover;
+    height: 50vh;
   }
   .bagger-menu {
     display: flex;
